Version 1.0
* New utility removeNonzoomAutosDiFX.py for removing rec-band autocorrelations from a zoom-only correlation
* migrated to parseDiFX package

Version 0.9
* New utility printDiFXInput.py for showing frequency table and baseline freq x freq pairs
* Update parseDiFX.py to handle output bands info if present
* python3-fixed most scripts

Version 0.8
* New dangerous utility removeZerovalAutoDiFX.py for removing zero-valued autopower spectra
  that were in some cases inserted by DiFX between two DATASTREAMs

Version 0.7
* New dangerous utility polswapDiFX.py for relabeling polarizations in Swinburne format DiFX output
* parseDiFX.py: get more FREQ TABLE infos, add to-string conversion for Datastream etc objects

Version 0.6
* New utility plotDiFXPCal.py
* fringeFindDiFX.py: switched to numpy, options to show/hide zero baseline data (-z, -Z)
* plotDiFX.py: switched to numpy

Version 0.5
* plotDynamicSpectrum.py: bugfixes, plus in all-IF mode also plot phases in a second figure
* plotDiFX: option to unwrap phase, option to exclude autocorrelations from plot
* Tagged as DiFX-2.4 on November 4, 2014

Version 0.4
* Tagged as DiFX-2.3 in December 2013

Version 0.3
* post DiFX 2.1
* Bugfixes from Jan Wagner for plotDynamicSpectrum
* Tagged as DiFX-2.2 on May 31, 2013

Version 0.2
* post-DiFX-2.0.1
* diffDiFX.py is now more robust against slight differences in datasets
* extra functionality, better plotting for plotDiFX.py and plotDynamicSpectrum.py
* Version for DiFX-2.1, May 4, 2012

Version for DiFX-2.0.1, June 10, 2011
* New utilities snipDiFX.py, plotDynamicSpectrum.py, fringeFindDiFX.py
* Fixed some plotting bugs in plotDiFX.py
* printDiFX version bumped to 0.2

Utilities are generally unversioned: first entry 06 Sep 2010, ATD
* Changed makefile to use IPPLINKLIBS and got rid of RPFITSReader
* printDiFX: check for infinite visibilities/weights
* Version for DiFX 2.0.0